# ml-memfor

./: .gitignore
artifacts/: meta.json
cpp/: CMakeLists.txt
cpp/src/: main  main.cpp
py/: dataset_check.py  model.py  train.py
